2009-01-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (DEFAULT_BUFFER_USED): Changed default to true,
    (zoomOutlinePaint): New field,
    (zoomFillPaint): Likewise,
    (ChartPanel): Initialise new fields,
    (getZoomFillPaint): New method,
    (setZoomFillPaint): Likewise,
    (getZoomOutlinePaint): Likewise,
    (setZoomOutlinePaint): Likewise,
    (paintComponent): Update drawing of zoom rectangle,
    (mouseDragged): If useBuffer is true, repaint chart rather than using XOR
    for zoom rectangle,
    (mouseReleased): Likewise,
    (drawZoomRectangle): Only use XOR if useBuffer is false,
    (writeObject): Handle new fields,
    (readObject): Likewise.

2009-01-14  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2497611 by Peter Kolb:
    * source/org/jfree/chart/axis/CategoryAxis.java
    (getCategorySeriesMiddle): New method,
    * source/org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
    (initialise): Record visible series indices,
    * source/org/jfree/chart/renderer/category/BarRenderer.java
    (calculateBarWidth): Look for visible series count in state,
    (calculateBarW0): Likewise,
    (drawItem): Use the visible row index,
    * source/org/jfree/chart/renderer/category/CategoryItemRendererState.java
    (visibleSeries): New field,
    (getVisibleSeriesIndex): New method,
    (getVisibleSeriesCount): Likewise,
    (setVisibleSeriesArray): Likewise,
    * source/org/jfree/chart/renderer/category/IntervalBarRenderer.java
    (drawInterval): Use the visible row index,
    * source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
    (drawItem): Likewise,
    * source/org/jfree/chart/renderer/category/ScatterRenderer.java
    (drawItem): Likewise,
    * source/org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (drawItem): Likewise,
    (drawHorizontalItem): Changed signature,
    (drawVerticalItem): Likewise,